# cell-script

./: Cargo.toml  LICENSE  README.md
examples/: 0001-cloud-pricing.cells  example_1.cell  example_2.cell
lsp/: package.json
lsp/src/: extension.ts
src/: ast_interpreter.rs  cli.rs  cranelift.rs  ir.rs  ir_interpreter.rs  lexer.rs  lsp.rs  main.rs  parser.rs  scanner.rs  vm.rs
