[package]
name = "cell-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.10"
rayon = "1.5"
rand = "0.8"